# krejoinstack

./: .gitignore  HACKING.md  HACKING.rst  MANIFEST.in  README.md  README.rst  dbus-tree.txt  dependencies.sh  package-requirements.txt  requirements.txt  setup.cfg  setup.py
docs/: custom-template.yaml  juju-template.yaml
etc/: juju-config.yaml
krejoinstack/: konsole.py  main.py  rejoinstack.py  requirements.txt  ssh.py
krejoinstack/plugins/: __init__.py  base.py  custom.py  devstack.py  juju.py
krejoinstack/resources/: common-skel.yaml
krejoinstack/utils/: ssh.py
tools/: buildvenv.sh  install_build_deps.sh
