[metadata]
name = krejoinstack
summary = An easy way to debug devstack
description-file =
    README.rst
author = Erlon R. Cruz
author-email = sombrafam@gmail.com
home-page = http://github.com/sombrafam/krejoinstack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: OpenStack Developers
    License :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    krejoinstack

[entry_points]
console_scripts =
    krejoinstack = krejoinstack.rejoinstack:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
