[metadata]
version = 0.0.1
name = krejoinstack
summary = An easy way to debug devstack
long_description = file: README.md
long_description_content_type = text/markdown
author = Erlon R. Cruz
author_email = sombrafam@gmail.com
home_page = http://github.com/sombrafam/krejoinstack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: OpenStack Developers
    License :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    krejoin = krejoinstack.main:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
